# tdesktop

./: .gitignore  .gitmodules  CMakeLists.txt
Telegram/: CMakeLists.txt  r.sh
Telegram/Resources/langs/: lang.strings
Telegram/Resources/winrc/: Telegram.rc
Telegram/SourceFiles/: config.h  logs.cpp
Telegram/SourceFiles/_other/: updater_linux.cpp  updater_osx.m  updater_win.cpp
Telegram/SourceFiles/boxes/: about_box.cpp  sessions_box.cpp  stickers_box.cpp
Telegram/SourceFiles/core/: crash_report_window.cpp  crash_reports.cpp  launcher.cpp  mime_type.cpp  sandbox.cpp  update_checker.cpp  update_checker.h  version.h
Telegram/SourceFiles/data/: data_session.cpp
Telegram/SourceFiles/export/output/: export_output_abstract.cpp  export_output_html.cpp  export_output_text.cpp
Telegram/SourceFiles/intro/: intro.style  intro_start.cpp
Telegram/SourceFiles/lang/: lang_hardcoded.h
Telegram/SourceFiles/mtproto/: config_loader.cpp  connection_http.cpp  dc_options.cpp
Telegram/SourceFiles/platform/mac/: main_window_mac.mm  window_title_mac.mm
Telegram/SourceFiles/platform/win/: main_window_win.cpp  specific_win.cpp  windows_app_user_model_id.cpp
Telegram/SourceFiles/settings/: settings_notifications.cpp
Telegram/SourceFiles/window/: main_window.cpp  notifications_manager.cpp  notifications_manager_default.cpp  window_main_menu.cpp
Telegram/cmake/: telegram_options.cmake
